--- a/examples/petstore/buf.gen.yaml
+++ b/examples/petstore/buf.gen.yaml
@@ -4,6 +4,10 @@ plugins:
     out: gen
     opt:
       - paths=source_relative
+  - remote: buf.build/connectrpc/go
+    out: gen
+    opt:
+      - paths=source_relative
   - local: ./protoc-gen-oas2connect
     out: gen
     opt:
