feat: support feature "optional"
In fact, oas2connect requires nothing to support "optional"
but buf rise error when proto files contain "optional" keyword
if SupportedFeatures not contains "optional".

--- a/examples/petstore/Makefile
+++ b/examples/petstore/Makefile
@@ -6,6 +6,9 @@ generate: $(PLUGIN)
 $(PLUGIN):
 	cd ../.. && go build -o examples/petstore/$@ cmd/protoc-gen-oas2connect/main.go
 
+server:
+	go run cmd/server/main.go
+
 clean:
 	rm -rf gen
 	rm -rf $(PLUGIN)
